# MongooseEmbeddedServices

./: README.md
src/MongooseEmbeddedServices/: CMakeLists.txt
src/MongooseEmbeddedServices/MongooseEmbeddedServices/: CMakeLists.txt  MongooseEmbeddedServices.cpp  MongooseEmbeddedServices.h
src/MongooseEmbeddedServices/MongooseEmbeddedServices/docs/: index.html
src/MongooseEmbeddedServices/ResourceServices/: CMakeLists.txt  ResourceServices.cpp  ResourceServices.h
src/MongooseEmbeddedServices/ResourceServices/docs/: index.html
